--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -20,5 +20,5 @@ search = version = release = "{current_version}"
 replace = version = release = "{new_version}"
 
 [bumpversion:file:src/pannb/__init__.py]
-search = __version__ = "{current_version}"
-replace = __version__ = "{new_version}"
+search = '__version__: str = "{current_version}"'
+replace = '__version__: str = "{new_version}"'
