--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -22,3 +22,7 @@ replace = version = release = "{new_version}"
 [bumpversion:file:src/pannb/__init__.py]
 search = __version__: str = "{current_version}"
 replace = __version__: str = "{new_version}"
+
+[bumpversion:file:README.rst]
+search = v{current_version}.
+replace = v{new_version}.
